--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,4 @@ DB_PASS='w6s9duBV8zTYN9IC'
 SECRET_KEY='ndkfjhsenvjejsfyana'
 NODEMAILER_EMAIL='ananyatrip0802@gmail.com'
 NODEMAILER_PASS='xzscionxgudslact'
+BASE_URL="https://loccalhost:5000/api"
